cmake_minimum_required(VERSION 3.14)
project(DSA_01)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(DSA_01
        App.cpp
        Bag.cpp
        Bag.h
        BagIterator.cpp
        BagIterator.h
        ExtendedTest.cpp
        ExtendedTest.h
        ShortTest.cpp
        ShortTest.h)
